# emailagentautomation

./: README.md
backend/: .gitignore  agent.py  app.py  db.py  graph.db  invoking.py  model.py  pyproject.toml  testing.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  firstpage.js  humanapproval.js  router.js  second.js
