[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "secure-smtplib>=0.1.1",
    "uvicorn>=0.47.0",
]
